--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import './assets/css/fonts.css';
+@import './assets/css/button.css';
+@import './assets/css/form.css';
 html,
 body {
   height: 100%;
 }
 body {
   margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-family: 'Kanit', Roboto, 'Helvetica Neue', sans-serif !important;
 }
