--- a/src/assets/css/button.css
+++ b/src/assets/css/button.css
@@ -1,32 +1,37 @@
 .btn {
-  border-radius: 0px;
   font-weight: 300;
+  border-radius: 0;
 }
+
 .btn-rounded {
   border-radius: 60px;
 }
+
 .btn-custom,
 .btn-custom.disabled {
+  color: #fff;
   background: #ff6849;
   border: 1px solid #ff6849;
-  color: #ffffff;
 }
+
 .btn-custom:hover,
 .btn-custom.disabled:hover,
 .btn-custom:focus,
 .btn-custom.disabled:focus,
 .btn-custom.focus,
 .btn-custom.disabled.focus {
+  color: #fff;
   background: #ff6849;
-  opacity: 0.8;
-  color: #ffffff;
   border: 1px solid #ff6849;
+  opacity: .8;
 }
+
 .btn-primary,
 .btn-primary.disabled {
   background: #2a54f6;
   border: 1px solid #2a54f6;
 }
+
 .btn-primary:hover,
 .btn-primary.disabled:hover,
 .btn-primary:focus,
@@ -34,14 +39,17 @@
 .btn-primary.focus,
 .btn-primary.disabled.focus {
   background: #2a54f6;
-  /*opacity: 0.8;*/
+
+  /* opacity: 0.8; */
   border: 1px solid #2a54f6;
 }
+
 .btn-success,
 .btn-success.disabled {
   background: #00c292;
   border: 1px solid #00c292;
 }
+
 .btn-success:hover,
 .btn-success.disabled:hover,
 .btn-success:focus,
@@ -49,14 +57,16 @@
 .btn-success.focus,
 .btn-success.disabled.focus {
   background: #00c292;
-  opacity: 0.8;
   border: 1px solid #00c292;
+  opacity: .8;
 }
+
 .btn-info,
 .btn-info.disabled {
   background: #01c0c8;
   border: 1px solid #01c0c8;
 }
+
 .btn-info:hover,
 .btn-info.disabled:hover,
 .btn-info:focus,
@@ -64,20 +74,23 @@
 .btn-info.focus,
 .btn-info.disabled.focus {
   background: #01c0c8;
-  opacity: 0.8;
   border: 1px solid #01c0c8;
+  opacity: .8;
 }
+
 .btn-inc,
 .btn-inc.disabled {
+  color: #fff;
   background: #8cd4f5;
   border: 1px solid #8cd4f5;
-  color: #fff;
 }
+
 .btn-warning,
 .btn-warning.disabled {
   background: #fec107;
   border: 1px solid #fec107;
 }
+
 .btn-warning:hover,
 .btn-warning.disabled:hover,
 .btn-warning:focus,
@@ -85,14 +98,16 @@
 .btn-warning.focus,
 .btn-warning.disabled.focus {
   background: #fec107;
-  opacity: 0.8;
   border: 1px solid #fec107;
+  opacity: .8;
 }
+
 .btn-danger,
 .btn-danger.disabled {
   background: #fb9678;
   border: 1px solid #fb9678;
 }
+
 .btn-danger:hover,
 .btn-danger.disabled:hover,
 .btn-danger:focus,
@@ -100,27 +115,31 @@
 .btn-danger.focus,
 .btn-danger.disabled.focus {
   background: #fb9678;
-  opacity: 0.8;
   border: 1px solid #fb9678;
+  opacity: .8;
 }
+
 .btn-default,
 .btn-default.disabled {
-  background: #ffffff;
-  border: 1px solid #ffffff;
+  background: #fff;
+  border: 1px solid #fff;
 }
+
 .btn-default:hover,
 .btn-default.disabled:hover,
 .btn-default:focus,
 .btn-default.disabled:focus,
 .btn-default.focus,
 .btn-default.disabled.focus {
-  opacity: 0.8;
-  border: 1px solid #ffffff;
   background: #f1f1f1;
+  border: 1px solid #fff;
+  opacity: .8;
 }
+
 .btn-default.btn-outline {
-  background-color: #ffffff;
+  background-color: #fff;
 }
+
 .btn-default.btn-outline:hover,
 .btn-default.btn-outline:focus,
 .btn-default.btn-outline.focus {
@@ -129,81 +148,95 @@
 
 .btn-default2,
 .btn-default2.disabled {
-  background: #ffffff;
+  background: #fff;
   border: 1px solid #d0d2d3;
 }
+
 .btn-default2:hover,
 .btn-default2.disabled:hover,
 .btn-default2:focus,
 .btn-default2.disabled:focus,
 .btn-default2.focus,
 .btn-default2.disabled.focus {
-  opacity: 0.8;
-  border: 1px solid #ffffff;
   background: #f1f1f1;
+  border: 1px solid #fff;
+  opacity: .8;
 }
-.btn-default.btn-outline {
-  background-color: #ffffff;
+
+.btn-outline {
+  background-color: #fff;
 }
-.btn-default.btn-outline:hover,
-.btn-default.btn-outline:focus,
-.btn-default.btn-outline.focus {
+
+.btn-outline:hover,
+.btn-outline:focus,
+.btn-outline.focus {
   background: #f1f1f1;
 }
 
 .btn-primary.btn-outline {
   color: #2a54f6;
-  background-color: #ffffff;
+  background-color: #fff;
 }
+
 .btn-primary.btn-outline:hover,
 .btn-primary.btn-outline:focus,
 .btn-primary.btn-outline.focus {
+  color: #fff;
   background: #2a54f6;
-  color: #ffffff;
 }
+
 .btn-success.btn-outline {
   color: #00c292;
   background-color: transparent;
 }
+
 .btn-success.btn-outline:hover,
 .btn-success.btn-outline:focus,
 .btn-success.btn-outline.focus {
+  color: #fff;
   background: #00c292;
-  color: #ffffff;
 }
+
 .btn-info.btn-outline {
   color: #01c0c8;
   background-color: transparent;
 }
+
 .btn-info.btn-outline:hover,
 .btn-info.btn-outline:focus,
 .btn-info.btn-outline.focus {
+  color: #fff;
   background: #01c0c8;
-  color: #ffffff;
 }
+
 .btn-warning.btn-outline {
   color: #fec107;
   background-color: transparent;
 }
+
 .btn-warning.btn-outline:hover,
 .btn-warning.btn-outline:focus,
 .btn-warning.btn-outline.focus {
+  color: #fff;
   background: #fec107;
-  color: #ffffff;
 }
+
 .btn-danger.btn-outline {
   color: #fb9678;
   background-color: transparent;
 }
+
 .btn-danger.btn-outline:hover,
 .btn-danger.btn-outline:focus,
 .btn-danger.btn-outline.focus {
+  color: #fff;
   background: #fb9678;
-  color: #ffffff;
 }
+
 .button-box .btn {
-  margin: 0 8px 8px 0px;
+  margin: 0 8px 8px 0;
 }
+
 .btn-primary.btn-outline:hover,
 .btn-success.btn-outline:hover,
 .btn-info.btn-outline:hover,
@@ -211,64 +244,79 @@
 .btn-danger.btn-outline:hover {
   color: white;
 }
+
 .btn-label {
-  background: rgba(0, 0, 0, 0.05);
   display: inline-block;
   margin: -6px 12px -6px -14px;
   padding: 7px 15px;
+  background: rgba(0, 0, 0, .05);
 }
+
 .btn-facebook {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #3b5998 !important;
 }
+
 .btn-twitter {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #55acee !important;
 }
+
 .btn-linkedin {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #007bb6 !important;
 }
+
 .btn-dribbble {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #ea4c89 !important;
 }
+
 .btn-googleplus {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #dd4b39 !important;
 }
+
 .btn-instagram {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #3f729b !important;
 }
+
 .btn-pinterest {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #cb2027 !important;
 }
+
 .btn-dropbox {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #007ee5 !important;
 }
+
 .btn-flickr {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #ff0084 !important;
 }
+
 .btn-tumblr {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #32506d !important;
 }
+
 .btn-skype {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #00aff0 !important;
 }
+
 .btn-youtube {
-  color: #ffffff !important;
-  background-color: #bb0000 !important;
+  color: #fff !important;
+  background-color: #b00 !important;
 }
+
 .btn-github {
-  color: #ffffff !important;
+  color: #fff !important;
   background-color: #171515 !important;
 }
+
 .btn-primary.active.focus,
 .btn-primary.active:focus,
 .btn-primary.active:hover,
@@ -283,6 +331,7 @@
   background-color: #2a54f6;
   border: 1px solid #2a54f6;
 }
+
 .btn-success.active.focus,
 .btn-success.active:focus,
 .btn-success.active:hover,
@@ -297,6 +346,7 @@
   background-color: #00c292;
   border: 1px solid #00c292;
 }
+
 .btn-info.active.focus,
 .btn-info.active:focus,
 .btn-info.active:hover,
@@ -311,6 +361,7 @@
   background-color: #01c0c8;
   border: 1px solid #01c0c8;
 }
+
 .btn-warning.active.focus,
 .btn-warning.active:focus,
 .btn-warning.active:hover,
@@ -325,6 +376,7 @@
   background-color: #fec107;
   border: 1px solid #fec107;
 }
+
 .btn-danger.active.focus,
 .btn-danger.active:focus,
 .btn-danger.active:hover,
@@ -339,17 +391,15 @@
   background-color: #fb9678;
   border: 1px solid #fb9678;
 }
+
 .btn-inverse,
-.btn-inverse:hover,
-.btn-inverse:focus,
-.btn-inverse:active,
 .btn-inverse.active,
 .btn-inverse.focus,
 .btn-inverse:active,
 .btn-inverse:focus,
 .btn-inverse:hover,
 .open > .dropdown-toggle.btn-inverse {
+  color: #fff;
   background-color: #4c5667;
   border: 1px solid #4c5667;
-  color: #ffffff;
 }
