--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@use './app/theme/style';
+@use './styles/themes';
+@use './styles/custom';
+@use './styles/grid';
+@use './styles/helpers';
+@use './styles/plugins';
 @import './assets/css/fonts.css';
 @import './assets/css/button.css';
 @import './assets/css/form.css';
-
-html,
-body {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  font-family: Kanit, Roboto, 'Helvetica Neue', sans-serif !important;
-}
