--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -6,7 +6,7 @@
   >
     <mat-icon>menu</mat-icon>
   </button>
-
+  <breadcrumb style="padding-top: 20px" [nav]="nav"></breadcrumb>
   <!-- <app-branding *ngIf="showBranding"></app-branding>
   <span fxFlex></span>
 
