--- a/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -4,7 +4,7 @@
       class="matero-breadcrumb-item"
       *ngFor="let navlink of nav; trackBy: trackByNavlink; first as isFirst"
     >
-      <a href="#" class="link" *ngIf="isFirst">{{ navlink }}</a>
+      <a href="#" class="link" *ngIf="isFirst">{{ navlink | translate }}</a>
       <ng-container *ngIf="!isFirst">
         <mat-icon class="chevron">chevron_right</mat-icon>
         <span class="link">{{ navlink | translate }}</span>
