--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -9,7 +9,7 @@
 // Light theme
 //
 $primary: mat.define-palette(mat.$indigo-palette);
-$accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$accent: mat.define-palette(mat.$indigo-palette, A200, A100, A400);
 $theme: mat.define-light-theme($primary, $accent);
 
 //////////////////////////////////////////////////////////////////////////////////////
