--- a/src/app/theme/admin-layout/admin-layout.component.scss
+++ b/src/app/theme/admin-layout/admin-layout.component.scss
@@ -58,9 +58,17 @@
       opacity: 0;
     }
 
+    // .matero-user-panel-name,
+    // .matero-user-panel-email,
+    // .user-panel-department,
+    // .matero-user-panel-icons,
     .sub-branding-logo {
       display: none;
     }
+
+    // .matero-user-panel {
+    //   padding: 0;
+    // }
 
     .matero-user-panel-avatar {
       transform: scale(.7);
@@ -81,9 +89,17 @@
         opacity: 1;
       }
 
+      // .matero-user-panel-name,
+      // .matero-user-panel-email,
+      // .user-panel-department,
+      // .matero-user-panel-icons,
       .sub-branding-logo {
         display: inline-block;
       }
+
+      // .matero-user-panel {
+      //   padding: 0 0 16px;
+      // }
 
       .matero-user-panel-avatar {
         transform: scale(1);
