--- a/src/app/routes/my-page/my-page.component.css
+++ b/src/app/routes/my-page/my-page.component.css
@@ -16,3 +16,16 @@
   font-weight: 500;
   font-size: 16px;
 }
+
+.risk {
+  color: #ec1c24;
+}
+
+.text-info {
+  color: #5bc0de !important;
+}
+
+.task-status {
+  position: relative;
+  top: 0;
+}
