--- a/src/styles/custom/_v1.scss
+++ b/src/styles/custom/_v1.scss
@@ -83,3 +83,35 @@
   top: 2px;
   font-size: 20px !important;
 }
+
+.font-14 {
+  font-size: 14px !important;
+}
+
+.table thead tr th {
+  height: 3em;
+  text-align: center !important;
+  vertical-align: middle;
+}
+
+.table > tbody > tr > td,
+.table > tbody > tr > th,
+.table > tfoot > tr > td,
+.table > tfoot > tr > th,
+.table > thead > tr > td,
+.table > thead > tr > th {
+  padding: 4px 0 !important;
+}
+
+.line3 {
+  width: 100%;
+  height: 3px;
+  background: #e6e7e8;
+}
+
+#loader {
+  width: 51px;
+  height: 51px;
+  margin: 0 auto;
+  transform: scale(.6);
+}
