--- a/src/app/theme/style/_variables.scss
+++ b/src/app/theme/style/_variables.scss
@@ -20,7 +20,8 @@ $topmenu-sticky-position-mobile: $toolbar-height-mobile !default;
 $font-family-sans-serif: 'Roboto', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial,
   'Lucida Grande', sans-serif !default;
 $font-family-monospace: 'Roboto Mono', monospace !default;
-$font-family-base: $font-family-sans-serif !default;
+$font-family-kanit: 'Kanit', sans-serif !default;
+$font-family-base: $font-family-kanit !default;
 
 // Breakpoints
 //
