--- a/src/app/routes/my-page/my-page.component.css
+++ b/src/app/routes/my-page/my-page.component.css
@@ -29,3 +29,28 @@
   position: relative;
   top: 0;
 }
+
+.empty {
+  line-height: 43px;
+}
+
+.today-task {
+  position: relative;
+  font-size: 12px;
+  color: #414141;
+}
+
+.number {
+  font-size: 30px;
+  margin: 10px;
+  font-weight: 500;
+}
+
+.text-blue3 {
+  color: #2a54f7;
+}
+
+.subtitle-date {
+  margin-top: -20px !important;
+  margin-bottom: 10px;
+}
