--- a/src/app/routes/my-page/my-page.component.html
+++ b/src/app/routes/my-page/my-page.component.html
@@ -27,8 +27,39 @@
 </div>
 
 <div class="matero-row" fxLayout="row wrap">
-  <div class="matero-col" fxFlex.gt-xs="50" fxFlex="100">
-    <mat-card class="example-card">
+  <div class="matero-col" fxFlex.gt-xs="100" fxFlex="100">
+    <mat-card>
+      <mat-card-title>
+        <div class="text-info row">
+          <div class="col">
+            <span class="work">Work Today</span>
+            <span
+              class="mat-card-subtitle d-inline-block ms-2"
+              [ngClass]="{ hide: countIsSelected(tasks) > 0 }"
+            >
+              (Please select task you plan to do from checkbox in task list)
+            </span>
+          </div>
+          <div class="col">
+            <div class="today-task float-end mt-2">
+              <span>Selected</span>
+              <span class="number text-blue3">{{ countIsSelected(tasks) }}</span>
+              <span>From {{ tasks.length }} Task</span>
+            </div>
+          </div>
+        </div>
+      </mat-card-title>
+      <mat-card-subtitle class="subtitle-date">{{ date | date: 'dd/MM/yyyy' }}</mat-card-subtitle>
+      <mat-card-content class="table-responsive">
+        <div class="line"></div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
+
+<div class="matero-row" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
+  <div class="matero-col" fxFlex>
+    <mat-card>
       <mat-card-title>
         <div class="risk row">
           <div class="col">
@@ -44,8 +75,8 @@
               (change)="riskOptionChange()"
               bindLabel="lable"
               bindValue="id"
-              class="font-14"
-              style="max-width: 280px"
+              class="font-14 float-end"
+              style="width: 280px"
             ></ng-select>
           </div>
         </div>
@@ -77,7 +108,7 @@
         <div class="line3"></div>
         <!-- paginator -->
         <nav *ngIf="riskNumbers.length > 0">
-          <ul class="pagination justify-content-center mt-4">
+          <ul class="pagination justify-content-center mt-3 mb-0">
             <li id="prev" class="page-item" [ngClass]="{ disabled: currentRiskListPage === 1 }">
               <a class="page-link" href="#" (click)="pageRiskListChanged()">Previous</a>
             </li>
@@ -102,8 +133,8 @@
       </mat-card-content>
     </mat-card>
   </div>
-  <div class="matero-col" fxFlex.gt-xs="50" fxFlex="100">
-    <mat-card class="example-card">
+  <div class="matero-col" fxFlex>
+    <mat-card class="issue">
       <mat-card-title>
         <div class="text-info row">
           <div class="col">
@@ -119,8 +150,8 @@
               (change)="issueOptionChange()"
               bindLabel="lable"
               bindValue="id"
-              class="font-14"
-              style="max-width: 280px"
+              class="font-14 float-end"
+              style="width: 280px"
             ></ng-select>
           </div>
         </div>
@@ -152,7 +183,7 @@
         <div class="line3"></div>
         <!-- paginator -->
         <nav *ngIf="issueNumbers.length > 0">
-          <ul class="pagination justify-content-center mt-4">
+          <ul class="pagination justify-content-center mt-3 mb-0">
             <li id="prev" class="page-item" [ngClass]="{ disabled: currentIssueListPage === 1 }">
               <a class="page-link" href="#" (click)="pageIssueListChanged()">Previous</a>
             </li>
