--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -5,11 +5,44 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 
+$md-gptvpm: (
+  50: #e5eafe,
+  100: #bfccfc,
+  200: #94aafa,
+  300: #6987f8,
+  400: #486ef7,
+  500: #2854f5,
+  600: #244df4,
+  700: #1e43f2,
+  800: #183af0,
+  900: #0f29ee,
+  A100: #fff,
+  A200: #e6e9ff,
+  A400: #b3baff,
+  A700: #9aa3ff,
+  contrast: (
+    50: #000,
+    100: #000,
+    200: #000,
+    300: #000,
+    400: #fff,
+    500: #fff,
+    600: #fff,
+    700: #fff,
+    800: #fff,
+    900: #fff,
+    A100: #000,
+    A200: #000,
+    A400: #000,
+    A700: #000,
+  ),
+);
+
 //
 // Light theme
 //
-$primary: mat.define-palette(mat.$indigo-palette);
-$accent: mat.define-palette(mat.$indigo-palette, A200, A100, A400);
+$primary: mat.define-palette($md-gptvpm, 500);
+$accent: mat.define-palette($md-gptvpm, A200, A100, A400);
 $theme: mat.define-light-theme($primary, $accent);
 
 //////////////////////////////////////////////////////////////////////////////////////
